# Visualisation-on-RVIZ-and-simulation-in-Gazebo-for-mobile-robot

./: README.md
pauli/: CMakeLists.txt  package.xml
pauli/Building_model/maze/: model.sdf
pauli/config/: joint_names_robot.yaml
pauli/launch/: cdd_camera.launch  cdd_fir.launch  cdd_fir.launch.py  cdd_imu.launch  cdd_lidar.launch  cmodel_xacro.launch  gdd_lidar.launch  gdifferential_drive.launch  gmodel_file_xacro.launch  gmodel_pauli.launch  gmodel_pauli.launch.py  gmodel_xacro.launch.py  rdd_lidar.launch  rdd_lidar.launch.py  rdifferential_drive.launch  rdifferential_drive.launch.py  rmodel_pauli.launch  rmodel_pauli.launch.py  rmodel_xacro.launch
pauli/launch/combined_launch/: cdd_camera.launch.py  cdd_imu.launch.py  cdd_lidar.launch.py  cmodel_xacro.launch.py
pauli/launch/gazebo_launch/: gdd_lidar.launch.py  gdifferential_drive.launch.py
pauli/launch/rviz_launch/: rmodel_xacro.launch.py
pauli/meshes/: base_link.STL  cam.STL  caster.STL  dcam.STL  flir2.STL  imu.STL  lidar.STL  lwheel.STL  rwheel.STL  scam.STL
pauli/rviz/: c_dd_camera.rviz  c_dd_imu.rviz  c_dd_lidar.rviz  dd_lidar.rviz  differential_drive.rviz  model.rviz
pauli/rviz2/: c_dd_camera.rviz  c_dd_imu.rviz  c_dd_lidar.rviz  dd_lidar.rviz  differential_drive.rviz  model.rviz
pauli/urdf/: c_dd_camera.urdf  c_dd_fir.urdf  c_dd_imu.urdf  c_dd_lidar.urdf  dd_lidar.urdf  differential_drive.urdf  model_pauli.urdf
pauli/urdf/xacro/: model_pauli.xacro  pauli_plugins_gazebo.xacro
pauli/worlds/: maze.world
